--- a/style.css
+++ b/style.css
@@ -9,6 +9,23 @@
         font-family: 'Amble-Regular', sans-serif;
 }
 
+ul 
+{
+    list-style: none;
+    display: flex;
+}
+
+li 
+{
+    margin-right: 1rem;
+}
+
+a 
+{
+    text-decoration: none;
+    color: black;
+}
+
 /************************************************
     FONT
  ************************************************/
@@ -40,4 +57,19 @@
 .text-center 
 {
     text-align: center;
+}
+
+.flex
+{
+    display: flex;
+}
+
+.margin-auto
+{
+    margin: auto;
+}
+
+.height-100
+{
+    height: 100%;
 }
