--- a/style.css
+++ b/style.css
@@ -73,3 +73,86 @@ a
 {
     height: 100%;
 }
+
+.font-white
+{
+    color: white;
+}
+
+
+header
+{
+    width: 100%;
+    height: 80px;
+}
+
+header nav
+{
+    height: 100%;
+}
+
+.whole-header
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 80px;
+    padding: 1.5rem 0.5rem;
+    background-color: rgba(0,132,253,255);
+}
+
+.logo
+{
+    position: relative;
+    left: 370px;
+}
+
+header ul 
+{
+    list-style-type: none;
+    width: 150px;
+    height: 100%;
+}
+
+.right-header
+{
+    display: flex;
+    justify-content: space-between;
+}
+
+nav
+{
+    display: flex;
+    align-items: center;    
+    justify-content: space-between;
+    flex-direction: row;
+    position: relative;
+    top: 10px;
+    right: 400px;
+}
+
+nav ul li 
+{
+    display: flex;
+    align-items: center;    
+    justify-content: space-around;
+    min-width: 70px;
+    margin-left: 25px;
+}
+
+.header-button
+{
+    background-color: white;
+    width: 110px;
+    text-align: center;
+    padding: 10px;
+    border-radius: 20px;
+    border: 0px solid white;
+    position: relative;
+    right: 100px;
+}
+
