--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ header nav
 .logo
 {
     position: relative;
-    left: 370px;
+    left: 270px;
 }
 
 header ul 
@@ -140,7 +140,7 @@ nav
     flex-direction: row;
     position: relative;
     top: 10px;
-    right: 400px;
+    right: 570px;
 }
 
 nav ul li 
@@ -161,13 +161,97 @@ nav ul li
     border-radius: 20px;
     border: 0px solid white;
     position: relative;
-    right: 100px;
+    right: 270px;
 }
 
 /************************************************
     MAIN SECTION JUMBOTRON
  ************************************************/
+section.jumbotron
+{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
 
+div.container-large
+{
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-gap: 20px;
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+.item
+{
+    background-color: rgba(181,221,255,255);
+    border-radius: 20px;
+}
+
+.item h3
+{
+    color: #0084fd;
+}
+
+.item-1 
+{
+    grid-row: 1 / 3;
+    grid-column: 1 / 3;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.text-item-1
+{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+.text-item-1 h3, .ltext-item-1t p, .text-item-1 button 
+{
+    margin-left: 20px;
+}
+
+.image-item-1 
+{
+    flex-shrink: 0; /* Prevents image from shrinking */
+}
+
+.image-item-1 img 
+{
+    width: 50%;
+    height: auto;
+}
+
+.item-2 
+{
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
+}
+
+.item-3 
+{
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+}
+
+.item-4 
+{
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+}
+
+.item-5 
+{
+    grid-row: 2 / 3;
+    grid-column: 3 / 4;
+}
 
 /************************************************
     MEDIA QUERY FOR RESPONSIVE DESIGN: MOBILE
