--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: 'Amble-Regular', sans-serif;
 }
 
 ul 
@@ -29,12 +28,6 @@ a
 /************************************************
     FONT
  ************************************************/
-
-@font-face 
-{
-    font-family: 'Amble-Regular';
-    src: url('font/Amble-Regular.ttf') format('otf'),
-}
 
 
 /************************************************
@@ -173,17 +166,10 @@ section.jumbotron
     justify-content: center;
     margin-top: 50px;
     margin-bottom: 100px;
+    margin-left: 250px;
+    margin-right: 250px;
 }
 
-div.container-large
-{
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-template-rows: auto auto;
-    grid-gap: 20px;
-    max-width: 960px;
-    margin: 0 auto;
-}
 
 .item
 {
@@ -196,13 +182,28 @@ div.container-large
     color: #0084fd;
 }
 
-.item-1 
+.row
 {
-    grid-row: 1 / 3;
-    grid-column: 1 / 3;
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.row-2
+{
+    margin-top: 15px;
+}
+
+.two-thirds
+{
+    flex-basis: calc(66.66% - 5px);
+    height: 300px;
+}
+
+.one-third
+{
+    flex-basis: calc(33.33% - 10px);
+    height: 300px;
 }
 
 .text-item-1
@@ -229,29 +230,6 @@ div.container-large
     height: auto;
 }
 
-.item-2 
-{
-    grid-row: 1 / 2;
-    grid-column: 3 / 4;
-}
-
-.item-3 
-{
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
-}
-
-.item-4 
-{
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
-}
-
-.item-5 
-{
-    grid-row: 2 / 3;
-    grid-column: 3 / 4;
-}
 
 /************************************************
     MEDIA QUERY FOR RESPONSIVE DESIGN: MOBILE
