--- a/style.css
+++ b/style.css
@@ -398,6 +398,35 @@ section.jumbotron
     left: 170px;
 }
 
+/************************************************
+    MAIN SECTION SECTION 2
+ ************************************************/
+#section-2 .container .text 
+{
+    margin-top: 40px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+#section-2 .container .text p
+{
+    margin-bottom: 30px;
+}
+
+
+#section-2 .container .text h3
+{
+    margin-bottom: 30px;
+    color: rgba(151,146,228,255);
+    font-size: 40px;
+    font-weight: 900;
+}
+
+#section-2 .container .text p:last-child
+{
+    width: 80%;
+    margin: 0 auto;
+}
 
 /************************************************
     MEDIA QUERY FOR RESPONSIVE DESIGN: MOBILE
