--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@ section.jumbotron
 }
 
 /************************************************
-    MAIN SECTION SECTION 1
+    MAIN SECTION 1
  ************************************************/
 
 #section-1
@@ -399,7 +399,7 @@ section.jumbotron
 }
 
 /************************************************
-    MAIN SECTION SECTION 2
+    MAIN SECTION 2
  ************************************************/
 #section-2
 {
@@ -468,6 +468,96 @@ section.jumbotron
 {
     padding-top: 30px;
 }
+/************************************************
+    MAIN SECTION 3 
+ ************************************************/
+#section-3
+{
+    background-color: rgba(151,146,228,255);
+}
+
+#section-3 .container
+{
+    padding-bottom: 60px;
+}
+
+#section-3 h2.main-section-title
+{
+    padding-top: 65px;
+    padding-bottom: 65px;
+    text-align: center;
+    margin: 0 auto;
+    color: white;
+    font-size: 30px;
+    font-weight: bolder;
+}
+
+#section-3 .column-1, .column-2, .column-3 
+{
+    background-color: white;
+    color: rgba(151,146,228,255);
+    text-align: left;
+    padding: 20px;
+    width: 350px;
+    height: 400px;
+    border-radius: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 20px;
+}
+
+#section-3 .column h1 
+{
+    font-size: 50px;
+    font-weight: bolder;
+    margin-bottom: 20px;
+    padding-left: 5px;
+}
+
+#section-3 .column h2
+{
+    font-size: 30px;
+    font-weight: bolder;
+    margin-bottom: 20px;
+    padding-left: 5px;
+}
+
+#section-3 .column p
+{
+    color: black;
+    line-height: 1.5rem;
+    margin-bottom: 20px;
+    padding-left: 5px;
+}
+
+#section-3 .column .more-button
+{
+    background-color: rgba(151,146,228,255);
+    color: white;
+    width: 140px;
+    height: 40px;
+    padding: 10px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: bolder;
+    border-radius: 30px;
+    border: 0px solid transparent;
+    margin-left: 5px;
+}
+
+/************************************************
+    MAIN SECTION 4
+ ************************************************/
+
+/************************************************
+    MAIN SECTION 5
+ ************************************************/
+
+
+/************************************************
+    FOOTER
+ ************************************************/
+
 
 /************************************************
     MEDIA QUERY FOR RESPONSIVE DESIGN: MOBILE
