--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: 'Tosia', 'FontAwesome', sans-serif;
+        font-family: 'Tosia', 'FontAwesome', 'Tosia-Bold', sans-serif;
 }
 
 
@@ -28,12 +28,18 @@ a
 }
 
 /************************************************
-    FONT
+    FONTS
  ************************************************/
 @font-face 
 {
     font-family: 'Tosia';
     src: url('font/ROHH\ \ TosiaRegular.otf');
+}
+
+@font-face 
+{
+    font-family: 'Tosia-Bold';
+    src: url('font/ROHH\ \ TosiaBold.otf');
 }
 
 /************************************************
@@ -552,7 +558,78 @@ section.jumbotron
 /************************************************
     MAIN SECTION 5
  ************************************************/
+#section-5
+{
+    background-color: rgba(151,146,228,255);
+    color: white;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    text-align: center;
+}
 
+#section-5 p:first-child
+{
+    color: #d2d0f3;
+    margin-bottom: 30px;
+}
+
+#section-5 h1
+{
+    font-size: 30px;
+    font-weight: bolder;
+}
+
+#section-5 h2
+{
+    color: rgba(253,193,95,255);
+    font-size: 60px;
+    font-weight: bolder;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+#section-5 p.still-in-beta
+{
+    width: 460px;
+    height: 50px;
+    margin: 0 auto;
+    line-height: 1.5rem;
+    margin-bottom: 20px;
+}
+
+#section-5 .get-started
+{
+    background-color: white;
+    color: rgba(151,146,228,255);
+    width: 270px;
+    height: 70px;
+    padding: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bolder;
+    border-radius: 40px;
+    border: 0px solid transparent;
+    margin-left: 5px;
+    margin-bottom: 30px;
+}
+
+#section-5 p:last-child 
+{
+    font-size: small;
+}
+
+#section-5 p:last-child span.point
+{
+    font-size: 5px;
+    position: relative;
+    bottom: 2.5px;
+}
+
+#section-5 p:last-child a
+{
+    color: white;
+    text-decoration: underline;
+}
 
 /************************************************
     FOOTER
