--- a/style.css
+++ b/style.css
@@ -554,6 +554,98 @@ section.jumbotron
 /************************************************
     MAIN SECTION 4
  ************************************************/
+#section-4 
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.text-section-4 
+{
+    text-align: left;
+    max-width: 50%;
+    height: 700px; /* Da Eliminare */
+    margin-left: 300px;
+}
+
+#section-4 .text-section-4  h1 
+{
+    font-size: 40px;
+    font-weight: bolder;
+    margin-bottom: 35px;
+    color: rgba(151,146,228,255);
+    padding-top: 80px;
+}
+
+#section-4 .text-section-4  p
+{
+    font-size: 18px;
+    line-height: 2rem;
+    width: 660px;
+    height: 230px;
+}
+
+#section-4 .text-section-4  p.bottom-text
+{
+    width: 650px;
+}
+
+.testimonial-picture
+{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 70px;
+}
+
+.testimonial-picture h4
+{
+    color: rgba(151,146,228,255);
+    font-size: 30px;
+    font-weight: bolder;
+    line-height: 2rem;
+    width: 240px;
+    height: 190px;
+    position: relative;
+    bottom: 60px;
+}
+
+.testimonial-picture img 
+{
+    width: 200px;
+    height: 200px;  
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.testimonial-picture i.fa-quote-left 
+{
+    font-size: 80px;
+    position: relative;
+    bottom: 210px;
+    left: 150px;
+}
+
+.testimonial-picture .find-me-on-linkedin
+{
+    background-color: rgba(151,146,228,255);
+    color: white;
+    width: 180px;
+    height: 30px;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+    font-size: 13px;
+    font-weight: bolder;
+    border-radius: 30px;
+    border: 0px solid transparent;
+    position: relative;
+    bottom: 70px;
+}
 
 /************************************************
     MAIN SECTION 5
