--- a/style-tablet.css
+++ b/style-tablet.css
@@ -97,5 +97,344 @@ a
     /************************************************
     HEADER
     ************************************************/
+    header
+    {
+        width: 100%;
+        height: 80px;
+    }
+
+    .whole-header
+    {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        z-index: 1;
+        width: 100%;
+        height: 80px;
+        padding: 1.5rem 0.5rem;
+        background-color: rgba(0,132,253,255);
+    }
+
+    .logo
+    {
+        position: relative;
+        left: 20px;
+    }
+
+    .fa-bars
+    {
+        position: relative;
+        display: inline-block;
+        right: 50px;
+        font-size: 2rem;
+    }
+
+    .right-header
+    {
+        display: none;
+    }
+
+    /************************************************
+        MAIN SECTION 3
+    ************************************************/
+    #section-3
+    {
+        background-color: rgba(151,146,228,255);
+    }
+
+    #section-3 .container 
+    {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* 2 columns */
+        grid-template-rows: repeat(3, 1fr); /* 3 rows */
+        grid-gap: 10px; /* gap between grid items */
+        width: 100%;
+        margin-bottom: 60px;
+    }
     
+    .grid-item 
+    {
+        background-color: white;
+        padding: 20px;
+    }
+
+    #section-3 h2.main-section-title
+    {
+        padding-top: 35px;
+        padding-bottom: 30px;
+        text-align: center;
+        margin: 0 auto;
+        color: white;
+        font-size: 30px;
+        font-weight: bolder;
+    }
+
+
+    #section-3 .grid-item
+    {
+        background-color: white;
+        color: rgba(151,146,228,255);
+        text-align: left;
+        padding: 20px;
+        width: 355px;
+        height: 420px;
+        border-radius: 30px;
+    }
+
+    #section-3 .grid-item h1 
+    {
+        font-size: 50px;
+        font-weight: bolder;
+        margin-bottom: 20px;
+        padding-left: 5px;
+    }
+
+    #section-3 .grid-item h2
+    {
+        font-size: 30px;
+        font-weight: bolder;
+        margin-bottom: 20px;
+        padding-left: 5px;
+    }
+
+    #section-3 .grid-item p
+    {
+        color: black;
+        line-height: 1.5rem;
+        margin-bottom: 20px;
+        padding-left: 5px;
+    }
+
+    #section-3 .grid-item .more-button
+    {
+        background-color: rgba(151,146,228,255);
+        color: white;
+        width: 140px;
+        height: 40px;
+        padding: 10px;
+        text-align: center;
+        font-size: 15px;
+        font-weight: bolder;
+        border-radius: 30px;
+        border: 0px solid transparent;
+        margin-left: 5px;
+    }
+
+    /************************************************
+        MAIN SECTION 4
+    ************************************************/
+    #section-4 
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        height: 1060px;
+    }
+
+    .text-section-4 
+    {
+        text-align: left;
+        width: 383px;
+        height: 822px;
+        position: relative;
+        right: 120px;
+    }
+
+    #section-4 .text-section-4  h1 
+    {
+        font-size: 80px;
+        font-weight: bolder;
+        margin-bottom: 35px;
+        color: rgba(151,146,228,255);
+        padding-top: 80px;
+    }
+
+    #section-4 .text-section-4  p
+    {
+        font-size: 18px;
+        line-height: 2rem;
+        width: 360px;
+        height: 379px;
+    }
+
+    #section-4 .text-section-4  p.bottom-text
+    {
+        width: 383px;
+    }
+
+    .testimonial-picture
+    {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-left: 70px;
+        position: relative;
+        bottom: 730px;
+        left: 190px;
+    }
+
+    .testimonial-picture h4
+    {
+        color: rgba(151,146,228,255);
+        font-size: 30px;
+        font-weight: bolder;
+        line-height: 2rem;
+        width: 240px;
+        height: 190px;
+        position: relative;
+        bottom: 60px;
+    }
+
+    .testimonial-picture img 
+    {
+        width: 200px;
+        height: 200px;  
+        border-radius: 50%;
+        object-fit: cover;
+    }
+
+    .testimonial-picture i.fa-quote-left 
+    {
+        font-size: 80px;
+        position: relative;
+        bottom: 210px;
+        left: 150px;
+    }
+
+    .testimonial-picture .find-me-on-linkedin
+    {
+        background-color: rgba(151,146,228,255);
+        color: white;
+        width: 180px;
+        height: 30px;
+        padding: 5px;
+        padding-left: 10px;
+        padding-right: 10px;
+        text-align: center;
+        font-size: 13px;
+        font-weight: bolder;
+        border-radius: 30px;
+        border: 0px solid transparent;
+        position: relative;
+        bottom: 70px;
+    }
+
+
+    /************************************************
+        MAIN SECTION 5
+    ************************************************/
+    #section-5
+    {
+        background-color: rgba(151,146,228,255);
+        color: white;
+        padding-top: 60px;
+        padding-bottom: 60px;
+        text-align: center;
+    }
+
+    #section-5 p:first-child
+    {
+        color: #d2d0f3;
+        margin-bottom: 30px;
+    }
+
+    #section-5 h1
+    {
+        font-size: 30px;
+        font-weight: bolder;
+    }
+
+    #section-5 h2
+    {
+        color: rgba(253,193,95,255);
+        font-size: 60px;
+        font-weight: bolder;
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+
+    #section-5 p.still-in-beta
+    {
+        width: 460px;
+        height: 50px;
+        margin: 0 auto;
+        line-height: 1.5rem;
+        margin-bottom: 20px;
+    }
+
+    #section-5 .get-started
+    {
+        background-color: white;
+        color: rgba(151,146,228,255);
+        width: 270px;
+        height: 70px;
+        padding: 10px;
+        text-align: center;
+        font-size: 20px;
+        font-weight: bolder;
+        border-radius: 40px;
+        border: 0px solid transparent;
+        margin-left: 5px;
+        margin-bottom: 30px;
+    }
+
+    #section-5 p:last-child 
+    {
+        font-size: small;
+    }
+
+    #section-5 p:last-child span.point
+    {
+        font-size: 5px;
+        position: relative;
+        bottom: 2.5px;
+    }
+
+    #section-5 p:last-child a
+    {
+        color: white;
+        text-decoration: underline;
+    }
+
+
+
+    /************************************************
+        FOOTER
+    ************************************************/
+    footer
+    {
+        background-color: rgba(51,51,51,255);
+        color: white;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        text-align: center;
+    }
+
+    footer a 
+    {
+        color:  rgba(151,146,228,255);
+        text-decoration: underline;
+    }
+
+    footer .top-footer-paragraph
+    {
+        width: 430px;
+        height: 40px;
+        margin: 0 auto;
+    }
+
+    footer .bottom-footer-paragraph
+    {
+        margin-top: 55px;
+        width: 390px;
+        height: 40px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+
 }
