--- a/style-tablet.css
+++ b/style-tablet.css
@@ -137,6 +137,95 @@ a
     }
 
     /************************************************
+        MAIN SECTION JUMBO
+    ************************************************/
+
+
+    /************************************************
+        MAIN SECTION 1
+    ************************************************/
+
+
+    /************************************************
+        MAIN SECTION 2
+    ************************************************/
+    #section-2
+    {
+        margin-bottom: 100px;
+    }
+
+    #section-2 .container  
+    {
+        width: 768px;
+    }
+
+    #section-2 .container .text 
+    {
+        margin-top: 40px;
+        margin-bottom: 50px;
+        text-align: center;
+    }
+
+    #section-2 .container .text p
+    {
+        margin-bottom: 30px;
+    }
+
+
+    #section-2 .container .text h3
+    {
+        margin-bottom: 30px;
+        color: rgba(151,146,228,255);
+        font-size: 40px;
+        font-weight: 900;
+    }
+
+    #section-2 .container .text p:last-child
+    {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .testimonial-row
+    {
+        background-color: rgba(151,146,228,255);
+        color: white;
+        border-radius: 30px;
+        display: flex;
+        align-items: center;
+        width: 746px;
+        height: 280px;
+        padding: 20px;
+        margin-bottom: 30px;
+    }
+
+    .testimonial-row .testimonial-picture
+    {
+        position: inherit;
+        margin-left: 0px;
+    }
+
+    .testimonial-row .testimonial-picture img
+    {
+        width: 200px;
+        height: 200px;  
+        border-radius: 50%;
+        object-fit: cover;
+    }
+
+    .testimonial-row .testimonial-text
+    {
+        margin-left: 30px;
+        font-size: 20px;
+        line-height: 1.5rem;
+    }
+
+    .testimonial-name
+    {
+        padding-top: 30px;
+    }
+
+    /************************************************
         MAIN SECTION 3
     ************************************************/
     #section-3
