Changed the width of the body

--- a/style-tablet.css
+++ b/style-tablet.css
@@ -95,7 +95,14 @@ a
 @media screen and (max-width: 768px)
 {
     /************************************************
-    HEADER
+        BODY
+    ************************************************/
+    body
+    {
+        width: 768px;
+    }
+    /************************************************
+        HEADER
     ************************************************/
     header
     {
@@ -144,7 +151,7 @@ a
     /************************************************
         MAIN SECTION 1
     ************************************************/
-
+    
 
     /************************************************
         MAIN SECTION 2
