--- a/style-tablet.css
+++ b/style-tablet.css
@@ -151,7 +151,92 @@ a
     /************************************************
         MAIN SECTION 1
     ************************************************/
-    
+    #section-1
+    {
+        margin-top: 60px;
+        margin-bottom: 60px;
+        background-color: rgba(151,146,228,255);
+    }
+
+    #section-1 .container
+    {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 768px;
+    }
+
+    #section-1 .container .left-column-section-1
+    {
+        margin-top: 100px;
+        margin-bottom: 50px;
+        text-align: left;
+        color: white;
+    }
+
+    .left-column-section-1 img
+    {
+        width: 100%;
+        height: 70%;
+    }
+
+    .left-column-section-1 h3
+    {
+        font-size: 50px;
+        font-weight: bolder;
+        margin-top: 80px;
+        margin-bottom: 50px;
+    }
+
+    .left-column-section-1 p
+    {
+        line-height: 1.5rem;
+        padding-right: 5px;
+    }
+
+    #section-1 .container .right-column-section-1
+    {
+        margin-top: 40px;
+        margin-bottom: 50px;
+        text-align: center;
+        background-color: white;
+        border-radius: 30px;
+    }
+
+
+    .right-column-section-1 img
+    {
+        width: 450px;
+        height: 500px;
+    }
+
+    .right-column-section-1 h3
+    {
+        font-size: 25px;
+        font-weight: bolder;
+        margin-top: 50px;
+        margin-bottom: 20px;
+    }
+
+    .right-column-section-1 p
+    {
+        font-style: italic;
+        line-height: 1.5rem;
+        margin-bottom: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .download-button
+    {
+        background-color: rgba(151,146,228,255);
+        width: 50px;
+        height: 50px;
+        border: 0px solid transparent;
+        border-radius: 50%;
+        font-size: large;
+        margin-bottom: 20px;
+    }
 
     /************************************************
         MAIN SECTION 2
