--- a/style-tablet.css
+++ b/style-tablet.css
@@ -146,6 +146,176 @@ a
     /************************************************
         MAIN SECTION JUMBO
     ************************************************/
+    section.jumbotron
+    {
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+        margin-bottom: 70px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .item
+    {
+        background-color: rgba(181,221,255,255);
+        border-radius: 20px;
+    }
+
+    .row .row-1 .item-2 
+    {
+        height: 550px;
+    }
+
+    .item .item-icon 
+    {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .item h3
+    {
+        color: #0084fd;
+        margin-top: 10px;
+        margin-bottom: 30px;
+    }
+
+    .item p 
+    {
+        line-height: 1.5rem;
+    }
+
+    .item-icon
+    {
+        font-size: 80px;
+    }
+
+    .row
+    {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .row-2
+    {
+        margin-top: 15px;
+    }
+
+    .two-thirds
+    {
+        flex-basis: calc(66.66% - 5px);
+        height: 300px;
+    }
+
+    .one-third
+    {
+        flex-basis: calc(33.33% - 10px);
+        height: 300px;
+    }
+
+    .item-1
+    {
+        display: flex; /* use flexbox to align the two sub-containers */
+        align-items: center; /* vertically center the two sub-containers */
+        text-align: left;
+        height: 567px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .item-2
+    {
+        height: 567px;
+        line-height: 3rem;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .item-2 p 
+    {
+        font-size: 15px;
+        line-height: 2.5rem;
+    }
+
+    .item-3, .item-4, .item-5
+    {
+        height: 437px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .item-3 p, .item-4 p, .item-5 p
+    {
+        line-height: 2.3rem;
+    }
+
+    .text-item-1
+    {
+        width: 100%; /* set width of the left container */
+        padding-left: 10px; /* add some padding for spacing */
+        padding-right: 20px; /* add some padding for spacing */
+    }
+
+
+    .text-item-1 h3
+    {
+        margin-top: 35px;
+    }
+
+    .text-item-1 p 
+    {
+        width: 93%;
+        line-height: 1.5rem;
+        order: 1;
+    }
+
+    .text-item-1 h3, .text-item-1 p, .text-item-1 button 
+    {
+        margin-left: 20px;
+    }
+
+    .image-item-1 
+    {
+        order: 2;
+        width: 100%;
+        height: 100%;
+    }
+
+    .image-item-1 img
+    {
+        width: 260px !important;
+        height: 300px !important;
+        position: relative;
+        top: 48px;
+        left: 20px;
+    }
+
+    .jumbo-button
+    {
+        background-color:#0084fd;
+        font-size: 15px;
+        color: white;
+        width: 200px;
+        height: 40px;
+        border: 0px solid #0084fd;
+        border-radius: 20px;
+        padding: 10px;
+        position: relative;
+        right: 5px;
+    }
+
+    .app-store
+    {
+        margin-left: 5px;
+    }
+        
+    .image-item-1 img
+    {
+        width: 70%;
+        height: 100%;
+    }
 
 
     /************************************************
