Finished section 3 for mobile devices

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -513,18 +513,20 @@ a
     #section-3 .container 
     {
         display: grid;
-        grid-template-columns: repeat(2, 1fr); /* 2 columns */
-        grid-template-rows: repeat(3, 1fr); /* 3 rows */
+        grid-template-columns: 1fr; /* 1fr = 1 fraction of the available space */
+        grid-template-rows: repeat(6, 1fr); /* 6 rows of 1 fraction of the available space and 1 column */
         grid-gap: 20px; /* gap between grid items */
-        width: 100%;
+        width: 480px;
         margin-bottom: 60px;
         padding-bottom: 60px;
+        margin-left: 40px;
     }
     
     .grid-item 
     {
         background-color: white;
         padding: 20px;
+        line-height: 4rem;
     }
 
     #section-3 h2.main-section-title
